Fixed problem with UNCs on windows and now searces exe files